[package]
name = "NameNetwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nalgebra = "0.32.3"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
ndarray-linalg = "0.16.0"
anyhow = "1.0.79"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"